tests/fixtures/errors/compilation-errors/src/ModuleNameMismatch.elm
module OtherModuleName exposing (a)

a = 1
